Right Panel works
Right panel works

--- a/Suhply v5/landing.html
+++ b/Suhply v5/landing.html
@@ -62,6 +62,8 @@
             </div>
             <div class="content_rightpanel">
                 <div class="content_rightpanel_aboveimagegrid">
+                    <div class="content_rightpanel_dummypanel"></div>
+                    <div class="content_rightpanel_productclass">LONG SKINNY JEANS</div>
                     <div class="content_rightpanel_filterwrapper">
                         <img id="content_filtericon" src="img/Filter-icon.png">
                     </div>
@@ -72,7 +74,7 @@
                     <div class="imageCard">
                         <div class="loveHeart"></div>
                         <div class="AddToBasket">
-                            <div class="AddToBasket_cost">$36</div>
+                            <div class="AddToBasket_cost">$37</div>
                         </div>
                         <img alt="jeans" src="img/sampleImages/jeans.jpg">
                     </div>
